objects/LAT_FormBuilderShare__c.object
<CustomObject>
    <fields>
        <fullName>LAT_AccessLevel__c</fullName>
        <label>Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>View</fullName>
                </value>
                <value>
                    <fullName>Fill</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Form Builder Sharings</relationshipLabel>
        <relationshipName>Form_Builder_Sharings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_FormBuilderSchema__c</fullName>
        <label>Form Builder Schema</label>
        <referenceTo>LAT_FormBuilderSchema__c</referenceTo>
        <relationshipLabel>Form Builder Sharings</relationshipLabel>
        <relationshipName>Form_Builder_Sharings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>LAT_GroupFromula__c</fullName>
        <formula>IF(BEGINS(LAT_Group__c, &apos;00G&apos;),LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +&apos;/lightning/setup/Queues/page?address=%2Fp%2Fown%2FQueue%2Fd%3Fid%3D&apos; + LAT_Group__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Group__c</fullName>
        <label>Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Form_Builder_Sharings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Form Builder Share</label>
    <listViews>
        <fullName>Lista</fullName>
        <columns>NAME</columns>
        <columns>LAT_User__c</columns>
        <columns>LAT_AccessLevel__c</columns>
        <filterScope>Everything</filterScope>
        <label>Lista</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Form Builder Share Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Builder Sharings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>